# ani-web

./: .dockerignore  .env.example  .env.homelab.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  PROJECT.md  README.md  compose.yaml  config.toml.example  design.md  opencode.json  package-lock.json  package.json  status.json  styles.css  tokens.css
.cargo/: audit.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml  maintenance.yml  release.yml
context/: 01-product-brief.md  02-current-system.md  03-target-architecture.md  04-api-data-provider-contracts.md  05-network-security.md  06-deploy-operate-monitor.md  07-migration-acceptance.md  08-capacity-cost-evolution.md  09-build-handoff.md  README.md
context/decisions/: README.md
deploy/cloudflare/: README.md  failover-worker.js
deploy/homelab/: .env.example  Caddyfile  README.md  ani-desk-cloudflare-ddns.service  ani-desk-cloudflare-ddns.timer  ani-desk-ddns.service  ani-desk-ddns.timer  ani-desk-deploy.service  ani-desk-deploy.timer  bootstrap-host.sh  cloudflare-ddns.sh  compose.yml  data-guard.py  namecheap-ddns.sh  pull-deploy.sh  run-pull-deploy.sh
docs/: ANI_WEB_HOMELAB_HANDBOOK.md  ARCHITECTURE.md  CHANGELOG.md  HOMELAB_OPERATIONS.md  MAINTENANCE_OPERATIONS.md  PLAN.md  PROVIDER_RESEARCH.md  REDESIGN_PLAN.md  status.md
examples/: provider_certification.rs
maintenance/: app.js  index.html
packaging/homebrew-tap/.github/workflows/: brew-test-bot.yml
packaging/homebrew/Casks/: ani-desk.rb  ani-desk.rb.template
packaging/linux/: install.sh
packaging/macos/: install.sh
packaging/scoop/: ani-desk.json
packaging/windows/: README.md  diagnose.ps1  fix-execution.ps1  install-all.bat  install-complete.ps1  install-curl.bat  install-easy.ps1  install.ps1  installer.rs
script/: build_and_run.sh
scripts/: check-generated-icons.mjs  collect-tauri-artifacts.mjs  docker-entrypoint.sh  generate-homebrew-cask.rb  generate-updater-manifest.mjs  prepare-icon-source.mjs  smoke-web-server.sh  test-cloudflare-worker.mjs  update-image-docs.sh  validate-maintenance.mjs  verify-release-version.mjs  windows-scp.exp  windows-test.exp
server/: Cargo.toml
server/src/: db.rs  main.rs
src/: catalog.rs  config.rs  db.rs  error.rs  image_manager.rs  lib.rs  player.rs  skip_times.rs  update.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: download.rs  main.rs  proxy.rs
src/image/: mod.rs
src/metadata/: mod.rs
src/providers/: allanime.rs  animegg.rs  animevietsub.rs  hianime.rs  kkphim.rs  mod.rs  moviebox.rs  niniyo.rs  ophim.rs
tests/: aa.js  aa_post.rs  avs.rs  avs_debug.rs  avs_eps.rs  avs_search.rs  deobf.cjs  deobf.js  fetch_aa.py  fetch_aa2.py  moviebox_debug.rs  providers_live.rs  scratch.rs  test_auth_endpoint.rs  test_auth_flow.rs  test_auth_headers.rs  test_auth_post.rs  test_data_guard.py  test_mb_get.rs  test_moviebox_auth.rs  test_moviebox_search_and_get.rs
tests/e2e/: conftest.py  requirements.txt  test_app.py  test_cli.py  test_compilation.py  test_maintenance.py
web/: index.html  player-controls.preview.html  vite.config.ts
web/public/: site.webmanifest
web/src/: App.tsx  api.ts  episode-label.ts  main.tsx  styles.css  types.ts  updater.ts
