[package]
name = "ani-desk-core"
version = "1.0.8"
edition = "2021"
authors = ["silent9669 <dev@silent9669.com>"]
description = "Core provider, playback, and storage library for ani-desk"
license = "MIT"
repository = "https://github.com/silent9669/ani-desk"

[workspace]
members = ["src-tauri"]
resolver = "2"

[lib]
name = "ani_desk_core"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Image support
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Configuration directories
directories = "5.0"

# Error handling
anyhow = "1.0.103"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
regex = "1.10"

# Image encoding
base64 = "0.22"

semver = "1.0"

# Crypto for AllAnime decryption
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"

# Installer utilities
indicatif = "0.17"
dialoguer = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
