[package]
name = "ani-desk-server"
version = "1.0.10"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
ani-desk-core = { path = ".." }
anyhow = "1.0.103"
async-stream = "0.3"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hmac = "0.12"
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["compression-br", "compression-gzip", "fs", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.8", features = ["v4", "serde"] }
