[package]
name = "ani-desk"
version = "1.0.3"
description = "Netflix-inspired desktop app for anime streaming"
authors = ["silent9669 <dev@silent9669.com>"]
edition = "2021"
license = "MIT"

[dependencies]
ani-desk-core = { path = ".." }
anyhow = "1.0.103"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2.3.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
uuid = { version = "1.8", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
